Changed application name

--- a/README
+++ b/README
@@ -1,2 +1,12 @@
 A simple sample for cross-device mobile app architecture.
-Details to follow...
+
+-HTML5, CSS & JavaScript
+-jQuery
+-KendoUI Mobile, MVVM, Templates,
+-Amplify.js, Underscore.js, Notifier, 
+-Offline, Local Storage
+-PhoneGap, Camera, Upload
+-.NET 4.5, ASP.NET Web Api, IQueryable, Help Page, Tracing
+-SignalR
+-AutoMapper, AutoFac, Repository pattern, EF Code-First
+-WIF, thinktecture.IdentityModel, Basic AuthN, Windows Azure ACS
